# intelligent-systems-hahai

./: .gitignore  README.md  package-lock.json
hahai-api/: pyproject.toml
hahai-api/app/: auth.py  config.py  server.py
hahai-api/app/api/: dependencies.py
hahai-api/app/api/v1/: router.py
hahai-api/app/api/v1/endpoints/: admin.py  auth.py  interns.py  process.py  records.py
hahai-api/app/db/: keys.py  redis.py
hahai-api/app/schemas/: inference.py  intern.py  patient_record.py
hahai-api/app/services/ml/: gradcam.py  model.py  preprocessing.py
hahai-api/app/services/storage/: images.py  interns.py  records.py
hahai-app/: index.html  package-lock.json  package.json
hahai-app/public/: env.js
hahai-app/src/: App.css  App.jsx  index.css
hahai-app/src/components/: RequireAdmin.jsx  RequireAuth.jsx
hahai-app/src/helpers/: auth.js
hahai-app/src/pages/: Admin.jsx  Analysis.jsx  History.jsx  Home.jsx  Intern.jsx  Navbar.jsx  RequireIntern.jsx
