[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hahai-api"
version = "0.1.0"
description = "FastAPI backend for radiology training app"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "httpx>=0.27",
  "numpy>=1.26",
  "opencv-python-headless==4.12.0.88",
  "tensorflow==2.18.*"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]